--- a/preview.html
+++ b/preview.html
@@ -9,65 +9,65 @@
   <section class="section">
    <div class="columns">
     <div class="column is-one-fifth">
-     <img alt="article_pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/Coat_of_Arms_of_Great_Britain_%281707-1714%29.svg/210px-Coat_of_Arms_of_Great_Britain_%281707-1714%29.svg.png"/>
+     <img alt="article_pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Coat_of_Arms_of_Queen_Isabella_of_Castile_%281492-1504%29.svg/33px-Coat_of_Arms_of_Queen_Isabella_of_Castile_%281492-1504%29.svg.png"/>
     </div>
     <div class="column">
      <h1 class="title">
-      Statute of Anne
+      a rebellion
      </h1>
      <p class="subtitle">
-      1710 ‚Äì The Statute of Anne, the first legislation in Great Britain providing for copyright regulated by the government and courts, received royal assent and went into effect five days later....
+      1499 ñ Muslims in Granada began a rebellion against their Castilian rulers in response to forced conversions to Catholicism.
      </p>
-     <a href="https://en.wikipedia.org/wiki/Statute_of_Anne">
-      https://en.wikipedia.org/wiki/Statute_of_Anne
+     <a href="https://en.wikipedia.org/wiki/Rebellion_of_the_Alpujarras_(1499%E2%80%931501)">
+      https://en.wikipedia.org/wiki/Rebellion_of_the_Alpujarras_(1499%E2%80%931501)
      </a>
     </div>
    </div>
    <div class="columns">
     <div class="column is-one-fifth">
-     <img alt="article_pic" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/36px-Flag_of_the_United_States.svg.png"/>
+     <img alt="article_pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Rc05640.jpg/330px-Rc05640.jpg"/>
     </div>
     <div class="column">
      <h1 class="title">
-      one of the deadliest tornado outbreaks in U.S. history
+      land speed record
      </h1>
      <p class="subtitle">
-      1936 ‚Äì An F5 tornado struck Tupelo, Mississippi, and killed at least 216 people during one of the deadliest tornado outbreaks in U.S. history....
+      1898 ñ Gaston de Chasseloup-Laubat (pictured) set the first official land speed record, averaging 63.16†km/h (39.245†mph) over 1†km (0.62†mi) in AchËres, France.
      </p>
-     <a href="https://en.wikipedia.org/wiki/1936_Tupelo%E2%80%93Gainesville_tornado_outbreak">
-      https://en.wikipedia.org/wiki/1936_Tupelo%E2%80%93Gainesville_tornado_outbreak
+     <a href="https://en.wikipedia.org/wiki/Land_speed_record">
+      https://en.wikipedia.org/wiki/Land_speed_record
      </a>
     </div>
    </div>
    <div class="columns">
     <div class="column is-one-fifth">
-     <img alt="article_pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Flag_of_South_Vietnam.svg/35px-Flag_of_South_Vietnam.svg.png"/>
+     <img alt="article_pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Flag_of_Germany_%281867%E2%80%931918%29.svg/35px-Flag_of_Germany_%281867%E2%80%931918%29.svg.png"/>
     </div>
     <div class="column">
      <h1 class="title">
-      Buddhist Uprising
+      defeated German forces
      </h1>
      <p class="subtitle">
-      1966 ‚Äì During the Buddhist Uprising, South Vietnamese military prime minister Nguy·ªÖn Cao K·ª≥ personally attempted to lead the capture of the restive city of ƒê√† N·∫µng before backing down....
+      1916 ñ The French defeated German forces around the city of Verdun-sur-Meuse in northeast France, ending the longest and one of the bloodiest battles in the First World War.
      </p>
-     <a href="https://en.wikipedia.org/wiki/Buddhist_Uprising">
-      https://en.wikipedia.org/wiki/Buddhist_Uprising
+     <a href="https://en.wikipedia.org/wiki/Battle_of_Verdun">
+      https://en.wikipedia.org/wiki/Battle_of_Verdun
      </a>
     </div>
    </div>
    <div class="columns">
     <div class="column is-one-fifth">
-     <img alt="article_pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/E28_Expressway_%28Japan%29.png/38px-E28_Expressway_%28Japan%29.png"/>
+     <img alt="article_pic" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/48px-Flag_of_the_United_States.svg.png"/>
     </div>
     <div class="column">
      <h1 class="title">
-      Akashi Kaiky≈ç Bridge
+      passed a controversial resolution
      </h1>
      <p class="subtitle">
-      1998 ‚Äì The Akashi Kaiky≈ç Bridge (pictured), the longest suspension bridge in the world, linking Awaji Island and Kobe in Japan, opened to traffic....
+      1996 ñ The school board of Oakland, California, passed a controversial resolution officially declaring African-American Vernacular English to be a separate language or dialect.
      </p>
-     <a href="https://en.wikipedia.org/wiki/Akashi_Kaiky%C5%8D_Bridge">
-      https://en.wikipedia.org/wiki/Akashi_Kaiky%C5%8D_Bridge
+     <a href="https://en.wikipedia.org/wiki/African-American_Vernacular_English_and_education">
+      https://en.wikipedia.org/wiki/African-American_Vernacular_English_and_education
      </a>
     </div>
    </div>
