--- a/preview.html
+++ b/preview.html
@@ -16,7 +16,7 @@
       a rebellion
      </h1>
      <p class="subtitle">
-      1499 – Muslims in Granada began a rebellion against their Castilian rulers in response to forced conversions to Catholicism.
+      1499 â€“ Muslims in Granada began a rebellion against their Castilian rulers in response to forced conversions to Catholicism.
      </p>
      <a href="https://en.wikipedia.org/wiki/Rebellion_of_the_Alpujarras_(1499%E2%80%931501)">
       https://en.wikipedia.org/wiki/Rebellion_of_the_Alpujarras_(1499%E2%80%931501)
@@ -32,7 +32,7 @@
       land speed record
      </h1>
      <p class="subtitle">
-      1898 – Gaston de Chasseloup-Laubat (pictured) set the first official land speed record, averaging 63.16 km/h (39.245 mph) over 1 km (0.62 mi) in Achères, France.
+      1898 â€“ Gaston de Chasseloup-Laubat (pictured) set the first official land speed record, averaging 63.16Â km/h (39.245Â mph) over 1Â km (0.62Â mi) in AchÃ¨res, France.
      </p>
      <a href="https://en.wikipedia.org/wiki/Land_speed_record">
       https://en.wikipedia.org/wiki/Land_speed_record
@@ -48,7 +48,7 @@
       defeated German forces
      </h1>
      <p class="subtitle">
-      1916 – The French defeated German forces around the city of Verdun-sur-Meuse in northeast France, ending the longest and one of the bloodiest battles in the First World War.
+      1916 â€“ The French defeated German forces around the city of Verdun-sur-Meuse in northeast France, ending the longest and one of the bloodiest battles in the First World War.
      </p>
      <a href="https://en.wikipedia.org/wiki/Battle_of_Verdun">
       https://en.wikipedia.org/wiki/Battle_of_Verdun
@@ -64,7 +64,7 @@
       passed a controversial resolution
      </h1>
      <p class="subtitle">
-      1996 – The school board of Oakland, California, passed a controversial resolution officially declaring African-American Vernacular English to be a separate language or dialect.
+      1996 â€“ The school board of Oakland, California, passed a controversial resolution officially declaring African-American Vernacular English to be a separate language or dialect.
      </p>
      <a href="https://en.wikipedia.org/wiki/African-American_Vernacular_English_and_education">
       https://en.wikipedia.org/wiki/African-American_Vernacular_English_and_education
